<resources>
    <string name="app_name">万事叮当</string>

    <string name="homepage">团购</string>
    <string name="mall">商城</string>

    <string name="admin">管家</string>
    <string name="zone">社区</string>
    <string name="personal">个人</string>

    <string name="press_again_to_leave">再按一次退出</string>
    <string name="loading">正在加载...</string>
    <string name="edit">编辑</string>
    <string name="empty_fornow">暂无内容</string>
    <string name="load_err_retry">加载失败，点击重试</string>
    <string name="net_error">网络错误</string>
    <string name="upload_success">上传成功</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="login">登录</string>
    <string name="user_protocol">用户协议</string>
    <string name="login_with_qq">QQ号登录</string>
    <string name="qq_not_installed">请先安装QQ客户端</string>
    <string name="qq_auth_failed">QQ授权失败</string>
    <string name="qq_authed_loging">QQ授权成功,正在登录...</string>
    <string name="qq_thumb_nick">获取QQ头像昵称...</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="phone_number_cant_empty">手机号码不能为空</string>
    <string name="phone_number">电话号码</string>
    <string name="phone_number_invalid">请输入正确的手机号码</string>
    <string name="fetch_captcha">获取验证码</string>
    <string name="send_captcha">发送验证码</string>
    <string name="captcha_sending">正在发送验证码...</string>
    <string name="please_input_captcha_with_6_digits">请输入6位验证码数字</string>
    <string name="login_ing">正在登录...</string>
    <string name="have_read_and_agreed_with">已阅读并同意</string>

    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="city">城市</string>
    <string name="birth_date">出生日期</string>
    <string name="username_nickname">用户名/昵称</string>
    <string name="pick_avatar">选择头像</string>
    <string name="imageGallery">相册</string>
    <string name="takePhoto">拍照</string>
    <string name="done">完成</string>
    <string name="version">版本</string>
    <string name="version_number">版本号</string>
    <string name="logout">退出登录</string>

    <string name="choose_payway">选择支付方式</string>
    <string name="wchat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="share">分享</string>
    <string name="about_app">关于万事叮当</string>

    <string name="share_title">万事叮当--让你遇见更好的自己</string>
    <string name="share_content">万事叮当是一款快速团购APP</string>
    <string name="goods_name">商品名称</string>
    <string name="name">姓名</string>
    <string name="goods_size">商品规格</string>
    <string name="goods_amount">商品数量</string>

    <string name="add_image">添加图片</string>
    <string name="add_new_address">添加新地址</string>
    <string name="portrait">头像</string>
    <string name="my_information">我的资料</string>
    <string name="balance_of_account">账户余额</string>
    <string name="my_balance">我的余额</string>
    <string name="my_orders">我的订单</string>
    <string name="address_manage">收货地址管理</string>
    <string name="group_buying_message">拼团消息</string>
    <string name="afford_original_price">原价购买</string>
    <string name="share_app">分享叮当口袋</string>
    <string name="setting">设置</string>
    <string name="order_status">订单状态</string>
    <string name="RMB">¥</string>
    <string name="pending">待处理</string>
    <string name="version_info">版本信息</string>
    <string name="software_name">软件名称</string>
    <string name="exit">退出</string>


    <string name="group_status">拼团状态</string>
    <string name="merchant_name">商家名称</string>
    <string name="return_goods">退货</string>
    <string name="specification_type">规格类型</string>
    <string name="freight">运费</string>
    <string name="total">合计</string>
    <string name="cancel_group">取消参团</string>
    <string name="accept_group">接受参团</string>
    <string name="earn_money_machine">赚钱机器</string>
    <string name="leader_prize">团长奖励</string>
    <string name="priority_illustration">特权说明</string>
    <string name="input_reason_returning_goods">请输入退货理由</string>
    <string name="consignee">收货人</string>
    <string name="order_number">订单编号</string>
    <string name="tracking_number">运单号</string>
    <string name="express_info">物流信息</string>

    <string name="look_up_order">查看订单</string>
    <string name="decline_group">不接受参团</string>
    <string name="leave_message_and_ask">留言询问</string>

    <string name="delivery_address">收货地址</string>
    <string name="address_manager">收货地址管理</string>
    <string name="address">地址</string>
    <string name="order_detail">订单详情</string>
    <string name="return_goods_illustration">退货说明</string>

    <string name="group_buy_type">团购方式</string>
    <string name="open_group">开团</string>
    <string name="open_group_discount">邀请2位小伙伴参团,团长可得返利</string>
    <string name="join_group">参团</string>
    <string name="join_group_explain">随机计入叮当团,快速成团</string>

    <string name="address_select">选选择收货地址</string>
    <string name="address_edit">编辑</string>
    <string name="address_add">添加新地址</string>

    <string name="pay_type_select">选择支付方式</string>
    <string name="pay_balance">余额</string>
    <string name="pay_confirm">确认支付</string>

    <string name="pay_success">支付成功</string>
    <string name="has_pay">买家已付款</string>
    <string name="receiver">收货人:</string>
    <string name="receive_address">收货地址:</string>
    <string name="receive_money">实收款</string>
    <string name="back_home">返回首页</string>
    <string name="check_order">查看订单</string>
    <string name="invite_friends">邀请好友参团</string>
    <string name="invite_detail1">再有两名好友付款参团,即成功升级</string>
    <string name="invite_detail2">成团即返现5%</string>
</resources>
