<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_color"
    android:orientation="vertical">


    <TextView
        android:id="@+id/frg_setting_version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/user_protocol"
        android:textColor="@color/txt_lvl_3"
        android:textSize="@dimen/txt_size_3" />

    <include layout="@layout/under_line" />

    <TextView
        android:id="@+id/frg_setting_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/about_app"
        android:textColor="@color/txt_lvl_3"
        android:textSize="@dimen/txt_size_3" />

    <com.hcb.jingle.widget.RCTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_2"
        app:backgroundColor="@color/main_blue"
        app:cornerWidth="3dp" />

</LinearLayout>