<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/cell_group_info_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="1988-08-28 88:99:12"
                android:textColor="@color/txt_lvl_3"
                android:textSize="@dimen/txt_size_4" />

        </LinearLayout>

        <include layout="@layout/under_line" />

        <TextView
            android:id="@+id/cell_group_info_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/group_status"
            android:textColor="@color/txt_lvl_2"
            android:textSize="@dimen/txt_size_1" />


        <TextView
            android:id="@+id/cell_group_info_goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/goods_name"
            android:textColor="@color/txt_lvl_3"
            android:textSize="@dimen/txt_size_3" />

        <TextView
            android:id="@+id/cell_group_info_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/goods_size"
            android:textColor="@color/txt_lvl_3"
            android:textSize="@dimen/txt_size_3" />

        <TextView
            android:id="@+id/cell_group_info_goods_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/goods_amount"
            android:textColor="@color/txt_lvl_3"
            android:textSize="@dimen/txt_size_3" />
    </LinearLayout>
</LinearLayout>