<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlg_whole"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans_half">

    <LinearLayout
        android:id="@id/dlg_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/image_gallery"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/top_round_corner"
            android:gravity="center"
            android:text="@string/imageGallery"
            android:textColor="@color/txt_lvl_1"
            android:textSize="@dimen/txt_size_2" />

        <TextView
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/takePhoto"
            android:textColor="@color/txt_lvl_1"
            android:textSize="@dimen/txt_size_2" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bottom_round_corner"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/txt_lvl_1"
            android:textSize="@dimen/txt_size_3" />

    </LinearLayout>
</RelativeLayout>
