<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="16px"
        android:background="@color/list_divider_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/has_pay"
        android:textColor="@color/main_red"
        android:textSize="@dimen/txt_size_3" />
    <View
        android:layout_width="match_parent"
        android:layout_height="16px"
        android:background="@color/list_divider_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_margin_left"
        >
        <TextView
            android:id="@+id/receiver_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/receiver"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_3"
            />
        <TextView
            android:id="@+id/text_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/receiver_text"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/global_margin_left"
            android:text="XXX"
            />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_receiver"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/global_margin_left"
            android:text="18888888888"
            />
        <TextView
            android:id="@+id/text_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="待拼团"
            />
        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/receiver_text"
            android:text="@string/receive_address"
            android:layout_marginTop="@dimen/global_margin_left"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_3"
            />
        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/address_text"
            android:layout_marginLeft="@dimen/global_margin_left"
            android:layout_alignBottom="@id/address_text"
            android:text="浙江省杭州市XXXXXXXXXXXXXXXXX"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color"
        android:layout_marginLeft="@dimen/global_margin_left"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_margin_left"
        >
        <TextView
            android:id="@+id/money_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_money"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/text_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/money_text"
            android:layout_marginLeft="@dimen/global_margin_left"
            android:text="¥79.98"
            android:textColor="@color/main_red"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color"
        android:layout_marginLeft="@dimen/global_margin_left"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_margin_left"
        >
        <TextView
            android:id="@+id/text_check_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/global_margin_left"
            android:background="@drawable/shape_check_order"
            android:text="@string/check_order"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/global_margin_left"
        android:background="@color/list_divider_color"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/stub_avatar"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friends"
            android:textSize="@dimen/txt_size_2"
            android:layout_marginTop="16dp"
            />
        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/global_margin_left"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_wxpay"
                android:layout_alignParentLeft="true"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/qq_blue"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/global_margin_left"
            android:text="@string/invite_detail1"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/global_margin_left"
            android:text="@string/invite_detail2"
            android:textColor="@color/main_red"
            />
    </LinearLayout>
</LinearLayout>